--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci_zbiorcze.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci_zbiorcze.xhtml
@@ -88,7 +88,7 @@
                             </p:panelGrid>
                         </p:panelGrid>
                         <p:commandButton styleClass="buttonnorm" actionListener="#{nieobecnoscView.createzbiorczo(wpisView.firma)}" value="#{bundle.Save}" update="display"/>
-                        <p:commandButton value="#{bundle.Cancel}" onclick="NieobecnoscCreateDialog.hide()"/>
+                        <p:commandButton value="#{bundle.Cancel}" onclick="dialogpracownikanieobecnoscizbiorcze.hide()"  styleClass="buttonnorm2"/>
                     </h:panelGroup>
                 </h:form>
 
