--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -38,6 +38,7 @@
                                 <p:menuitem icon="pi pi-user-minus" value="nieobecności zbiorcze" style="width: 150px" onclick="PF('dialogpracownikanieobecnoscizbiorcze').show()" async="true"/>
                                 <p:menuitem icon="pi pi-cloud" value="urlop/choroba/ekwiw." style="width: 150px" onclick="PF('dialgoczaspracyurlop').show()" async="true"/>
                                 <p:menuitem icon="pi pi-file-excel" value="zbiorcze rach. do zlec." style="width: 150px" onclick="PF('dialogzbiorczerachunekzlecenia').show()" async="true"/>
+                                <p:menuitem icon="pi pi-file-excel" value="wprowadz. zmiennych" style="width: 150px" onclick="PF('dialogbiorczezmienne').show()" async="true"/>
                                 <p:menuitem icon="pi pi-file-excel" value="wystaw. rach. do zlec." style="width: 150px" onclick="PF('dialograchunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-calendar" value="kalendarz pracownika" style="width: 150px" onclick="PF('dialogkalendarzmiesiac').show()" async="true"/>
                                 <!--                                <p:menuitem icon="pi pi-calendar" value="paski oddelegowanie" style="width: 150px" onclick="PF('dialogpaskioddeleowanie').show()" async="true"/>-->
@@ -237,6 +238,7 @@
                 <ui:include src="sub/dialog/dialog_rachunek_zlecenia.xhtml"/>
                 <ui:include src="sub/dialog/dialog_zbiorcze_rachunek_zlecenia.xhtml"/>
                 <ui:include src="sub/dialog/dialog_zbiorcze_wprowadzaniezmiennych.xhtml"/>
+                <ui:include src="sub/dialog/dialog_zbiorcze_zmienne.xhtml"/>
                 <ui:include src="sub/dialog/dialog_komornik.xhtml"/>
                 <!--                <ui:include src="sub/dialog/dialog_paski_oddelegowanie.xhtml"/>-->
                 <h:form>
