srobne naprawy biurowe wysylka

--- a/kadry/src/main/webapp/pracownikwykaz/sub/edycjadanych_globalnie.xhtml
+++ b/kadry/src/main/webapp/pracownikwykaz/sub/edycjadanych_globalnie.xhtml
@@ -13,11 +13,11 @@
                     <p:panelGrid columns="2" rendered="#{pracownikView.selected != null}">
                         <p:outputLabel value="nazwisko" for="nazwisko" />
                         <p:inputText id="nazwisko" value="#{pracownikView.selected.nazwisko}" title="nazwisko" required="true" requiredMessage="Wpisz nazwisko">
-                            <p:ajax event="blur" listener="#{pracownikView.modyfikujnazwisko(pracownikView.selected.nazwisko)}" update="@this"/>
+<!--                            <p:ajax event="blur" listener="#{pracownikView.modyfikujnazwisko(pracownikView.selected.nazwisko)}" update="@this"/>-->
                         </p:inputText>
                         <p:outputLabel value="imię" for="imie" />
                         <p:inputText id="imie" value="#{pracownikView.selected.imie}" title="imię" required="true" requiredMessage="Wpisz imię">
-                            <p:ajax event="blur" listener="#{pracownikView.modyfikujimie(pracownikView.selected.imie)}" update="@this"/>
+<!--                            <p:ajax event="blur" listener="#{pracownikView.modyfikujimie(pracownikView.selected.imie)}" update="@this"/>-->
                         </p:inputText>
                         <p:outputLabel value="pesel" for="pesel" />
                         <p:inputText id="pesel" value="#{pracownikView.selected.pesel}" title="pesel" required="true" requiredMessage="Wpisz Pesel" maxlength="11">
