--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -167,7 +167,7 @@
                             </f:facet>
                             <h:outputText value="#{item11.kod}"/>
                         </p:column>
-                        <p:column width="300" filterBy="#{item11.opispelny}" filterMatchMode="contains">
+                        <p:column width="300" >
                             <f:facet name="header">
                                 <h:outputText value="opis"/>
                             </f:facet>
