--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
@@ -116,7 +116,7 @@
                         <f:facet name="header">
                             <h:outputText value="pdf"/>
                         </f:facet>
-                        <p:commandButton icon="pi pi-print"  actionListener="#{umowaView.drukujumoweselected(itemumowa)}" update="north, akordeon:UmowaListForm, EastPracownicy"/>
+                        <p:commandButton icon="pi pi-print"  actionListener="#{umowaView.drukujumoweselected(itemumowa)}" update="north, akordeon:UmowaListForm"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
                         <f:facet name="header">
