--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_zlecenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_zlecenie.xhtml
@@ -136,7 +136,7 @@
                          <f:facet name="header">
                             <h:outputText value="akt."/>
                         </f:facet>
-                        <p:commandButton icon="pi pi-sun" actionListener="#{umowaView.aktywujUmowe(itemumowa)}" update="north, @(form), EastPracownicy"/>
+                        <p:commandButton icon="pi pi-sun" actionListener="#{umowaView.aktywujUmowe(itemumowa)}" update="north, @(form)"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
                         <f:facet name="header">
