--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -82,7 +82,7 @@
                                     </p:selectOneMenu>
                                 </p:panelGrid>
                             </p:fragment>
-                            <p:panelGrid columns="2" style="width: 300px;"  styleClass="urlopnizostalo">
+                            <p:panelGrid columns="2" style="width: 300px;"  styleClass="urlopnizostalo" id="panelurlopow">
                                 <h:outputText value="rodzaj umowy:"/>
                                 <h:outputText value="#{wpisView.umowa.czastrwania}"/>
                                 <h:outputText value="data od:"/>
@@ -91,9 +91,12 @@
                                 <h:outputText value="#{wpisView.umowa.datado}"/>
                                 <h:outputText value="stanowisko:"/>
                                 <h:outputText value="#{wpisView.umowa.stanowisko}"/>
-                                <p:outputLabel value="urlopu do wyk.:" />
+                                <p:outputLabel value="urlopu do wyk. godziny:" />
                                 <h:outputText  value="#{nieobecnoscView.urlopprezentacja.doprzeniesienia}" style="color: green;" rendered="#{nieobecnoscView.urlopprezentacja.doprzeniesienia gt 0}"/>
                                 <h:outputText  value="#{nieobecnoscView.urlopprezentacja.doprzeniesienia}" style="color: red;" rendered="#{nieobecnoscView.urlopprezentacja.doprzeniesienia lt 1}"/>
+                                <p:outputLabel value="urlopu do wyk. dni:" />
+                                <h:outputText  value="#{nieobecnoscView.urlopprezentacja.doprzeniesieniadni}" style="color: green;" rendered="#{nieobecnoscView.urlopprezentacja.doprzeniesieniadni gt 0}"/>
+                                <h:outputText  value="#{nieobecnoscView.urlopprezentacja.doprzeniesieniadni}" style="color: red;" rendered="#{nieobecnoscView.urlopprezentacja.doprzeniesieniadni lt 1}"/>
                             </p:panelGrid>
                         </p:panelGrid>
                         <p:commandButton styleClass="buttonnorm" actionListener="#{nieobecnoscView.create()}" value="#{bundle.Save}" update="display,:NieobecnoscListForm:datalist @(.urlopnizostalo)"/>
