--- a/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
@@ -28,15 +28,33 @@
                                 </f:facet>
                                 <h:outputText value="#{itemroz.umowa.nrkolejny}"/>
                             </p:column>
-                            <p:column width="170">
+                            <p:column width="60">
                                 <f:facet name="header">
-                                    <h:outputText value="nazwa"/>
+                                    <h:outputText value="data"/>
                                 </f:facet>
                                 <h:outputText value="#{itemroz.data}">
                                     <f:convertDateTime dateStyle="medium" locale="pl"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column width="100">
+                            <p:column width="150">
+                                <f:facet name="header">
+                                    <h:outputText value="sposób roz."/>
+                                </f:facet>
+                                <h:outputText value="#{itemroz.przyczyna}"/>
+                            </p:column>
+                            <p:column width="250">
+                                <f:facet name="header">
+                                    <h:outputText value="podstawa praw."/>
+                                </f:facet>
+                                <h:outputText value="#{itemroz.podstawaprawna}"/>
+                            </p:column>
+                            <p:column width="60">
+                                <f:facet name="header">
+                                    <h:outputText value="umowa"/>
+                                </f:facet>
+                                <h:outputText value="#{itemroz.umowa.nrkolejny}"/>
+                            </p:column>
+                            <p:column width="70">
                                 <f:facet name="header">
                                     <h:outputText value="sposób"/>
                                 </f:facet>
@@ -44,14 +62,14 @@
                                 <h:outputText value="rozwiązanie"   rendered="#{itemroz.rozwiazanie}"/>
                                 <h:outputText value="porozumienie"   rendered="#{itemroz.porozumienie}"/>
                             </p:column>
-                            <p:column width="100">
+                            <p:column width="70">
                                 <f:facet name="header">
                                     <h:outputText value="przez kogo"/>
                                 </f:facet>
                                 <h:outputText value="pracodawca"   rendered="#{itemroz.pracodawca}"/>
                                 <h:outputText value="pracownik"   rendered="#{itemroz.pracownik}"/>
                             </p:column>
-                            <p:column width="100">
+                            <p:column width="70">
                                 <f:facet name="header">
                                     <h:outputText value="wypowiedzenie"/>
                                 </f:facet>
@@ -59,7 +77,7 @@
                                 <h:outputText value="miesiąc"   rendered="#{itemroz.miesiac1}"/>
                                 <h:outputText value="3 miesiące"   rendered="#{itemroz.miesiac3}"/>
                             </p:column>
-                            <p:column width="100">
+                            <p:column width="70">
                                 <f:facet name="header">
                                     <h:outputText value="tryb szczegolny"/>
                                 </f:facet>
